docs/v3.8.5/_sources/gallery/extras/photodiode.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/photodiode.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_photodiode.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_photodiode.py:


Photodiode Detector
===================

This example demonstrates the initialization and visualization of a Photodiode detector using PyMieSim.

.. GENERATED FROM PYTHON SOURCE LINES 9-10

Importing the package: PyMieSim

.. GENERATED FROM PYTHON SOURCE LINES 10-15

.. code-block:: Python

    from TypedUnit import ureg

    from PyMieSim.single.detector import Photodiode
    from PyMieSim.single import plot_system








.. GENERATED FROM PYTHON SOURCE LINES 16-17

Initializing the detector

.. GENERATED FROM PYTHON SOURCE LINES 17-25

.. code-block:: Python

    detector = Photodiode(
        NA=0.3 * ureg.AU,  # Numerical Aperture
        cache_NA=0.2 * ureg.AU,
        sampling=500 * ureg.AU,  # Number of sampling points
        gamma_offset=0 * ureg.degree,  # Gamma offset in degrees
        phi_offset=0 * ureg.degree,  # Phi offset in degrees
    )








.. GENERATED FROM PYTHON SOURCE LINES 26-27

Plotting the detector

.. GENERATED FROM PYTHON SOURCE LINES 27-28

.. code-block:: Python

    plot_system(detector)



.. image-sg:: /gallery/extras/images/sphx_glr_photodiode_001.png
   :alt: photodiode
   :srcset: /gallery/extras/images/sphx_glr_photodiode_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 0.293 seconds)


.. _sphx_glr_download_gallery_extras_photodiode.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: photodiode.ipynb <photodiode.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: photodiode.py <photodiode.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: photodiode.zip <photodiode.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
